--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-USER =
-PASSWORD =
-DATABASE =
-HOST =
+USER = sisvita_owner
+PASSWORD = vM1rGKOLT6bi
+DATABASE = sisvita
+HOST = ep-silent-fire-a57zp1ar.us-east-2.aws.neon.tech
 SERVER = postgresql
